fix: filter component alignment

--- a/src/components/FiltersSort/FiltersSort.module.css
+++ b/src/components/FiltersSort/FiltersSort.module.css
@@ -6,6 +6,11 @@
   margin-bottom: 24px;
   display: flex;
   justify-content: space-between;
+  align-items: start;
+}
+
+.ratingAndBtn {
+  display: flex;
 }
 
 .resetBtn {
